--- a/index.html
+++ b/index.html
@@ -3,23 +3,182 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Search Engine</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title>Smart Image Search Engine</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="photo-camera.png" type="image/png">
+    <meta name="description" content="Advanced image search engine with smart filtering, analytics, and modern UX">
+    <meta name="theme-color" content="#0066ff">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 
 <body>
-    <div id="top">
-        <img id="cute-sticker" src="photo-camera.png" alt="">
-        <h1>image search engine</h1>
+    <!-- Loading Overlay -->
+    <div id="loading-overlay" class="hidden">
+        <div class="spinner"></div>
+        <p>Searching images...</p>
     </div>
-    <form id="search-form">
-        <input type="text" id="search-box" placeholder="Search anything here!">
-        <button id="search-btn">Search</button>
-    </form>
-    <div id="search-result">
+
+    <!-- Header Section -->
+    <header id="top">
+        <div class="container">
+            <img src="photo-camera.png" alt="Camera Icon" id="logo">
+            <h1>Smart Image Search</h1>
+            <p class="subtitle">Powered by advanced search algorithms & analytics</p>
+        </div>
+    </header>
+
+    <!-- Search Section -->
+    <main class="container">
+        <section id="search-section">
+            <form id="search-form" role="search" aria-label="Image search form">
+                <div class="search-input-container">
+                    <input 
+                        type="text" 
+                        id="search-box" 
+                        placeholder="Search for images (e.g., 'nature', 'technology', 'architecture')"
+                        autocomplete="off"
+                        aria-label="Search query"
+                        maxlength="100"
+                    >
+                    <button type="submit" id="search-btn" aria-label="Search">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+                        </svg>
+                    </button>
+                </div>
+            </form>
+
+            <!-- Advanced Filters -->
+            <div id="filters-container" class="hidden">
+                <div class="filters-header">
+                    <h3>Advanced Filters</h3>
+                    <button id="clear-filters" class="text-btn">Clear All</button>
+                </div>
+                <div class="filters-grid">
+                    <div class="filter-group">
+                        <label for="orientation-filter">Orientation:</label>
+                        <select id="orientation-filter">
+                            <option value="">Any</option>
+                            <option value="landscape">Landscape</option>
+                            <option value="portrait">Portrait</option>
+                            <option value="squarish">Square</option>
+                        </select>
+                    </div>
+                    <div class="filter-group">
+                        <label for="color-filter">Color:</label>
+                        <select id="color-filter">
+                            <option value="">Any</option>
+                            <option value="black_and_white">Black & White</option>
+                            <option value="black">Black</option>
+                            <option value="white">White</option>
+                            <option value="yellow">Yellow</option>
+                            <option value="orange">Orange</option>
+                            <option value="red">Red</option>
+                            <option value="purple">Purple</option>
+                            <option value="magenta">Magenta</option>
+                            <option value="green">Green</option>
+                            <option value="teal">Teal</option>
+                            <option value="blue">Blue</option>
+                        </select>
+                    </div>
+                    <div class="filter-group">
+                        <label for="sort-filter">Sort by:</label>
+                        <select id="sort-filter">
+                            <option value="relevant">Relevance</option>
+                            <option value="latest">Latest</option>
+                            <option value="oldest">Oldest</option>
+                            <option value="popular">Popular</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+
+            <button id="toggle-filters" class="text-btn">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"/>
+                </svg>
+                Advanced Filters
+            </button>
+        </section>
+
+        <!-- Search Stats -->
+        <section id="search-stats" class="hidden">
+            <div class="stats-container">
+                <span id="results-count">0 results</span>
+                <span id="search-time">Search time: 0ms</span>
+                <span id="last-updated">Last updated: Never</span>
+            </div>
+        </section>
+
+        <!-- Error Message -->
+        <div id="error-message" class="error hidden" role="alert" aria-live="polite">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+            </svg>
+            <span id="error-text">Something went wrong. Please try again.</span>
+            <button id="retry-btn" class="text-btn">Retry</button>
+        </div>
+
+        <!-- Search Results -->
+        <section id="search-result" aria-live="polite" aria-label="Search results">
+            <!-- Results will be populated here -->
+        </section>
+
+        <!-- Load More Button -->
+        <div id="load-more-container" class="hidden">
+            <button id="show-more-btn" class="load-more-btn">
+                <span class="btn-text">Load More Images</span>
+                <span class="btn-loading hidden">Loading...</span>
+            </button>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Smart Image Search. Built for Amazon SDE Internship Application.</p>
+            <div class="footer-links">
+                <a href="#" onclick="showAnalytics()">View Analytics</a>
+                <a href="https://github.com" target="_blank" rel="noopener">View on GitHub</a>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Analytics Modal -->
+    <div id="analytics-modal" class="modal hidden">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Search Analytics</h2>
+                <button class="close-modal" onclick="hideAnalytics()">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="analytics-grid">
+                    <div class="metric-card">
+                        <h3>Total Searches</h3>
+                        <p id="total-searches">0</p>
+                    </div>
+                    <div class="metric-card">
+                        <h3>Average Response Time</h3>
+                        <p id="avg-response-time">0ms</p>
+                    </div>
+                    <div class="metric-card">
+                        <h3>Most Popular Query</h3>
+                        <p id="popular-query">None</p>
+                    </div>
+                    <div class="metric-card">
+                        <h3>Cache Hit Rate</h3>
+                        <p id="cache-hit-rate">0%</p>
+                    </div>
+                </div>
+                <div class="recent-searches">
+                    <h3>Recent Searches</h3>
+                    <ul id="recent-searches-list"></ul>
+                </div>
+            </div>
+        </div>
     </div>
-    <button id="show-more-btn">Show More</button>
 
     <script src="script.js"></script>
 </body>
