--- a/index.html
+++ b/index.html
@@ -138,10 +138,9 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Smart Image Search. Built for Amazon SDE Internship Application.</p>
+            <p>&copy; 2025 Smart Image Search.</p>
             <div class="footer-links">
-                <a href="#" onclick="showAnalytics()">View Analytics</a>
-                <a href="https://github.com" target="_blank" rel="noopener">View on GitHub</a>
+                <a href="https://github.com/divyanshg03/image-search-engine" target="_blank" rel="noopener">View on GitHub</a>
             </div>
         </div>
     </footer>
